--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
-
-
-/* só essa fonte!!!!!!!!!!!!!!!!!!!! */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap');
-
 
 * {
   margin: 0;
@@ -17,73 +11,27 @@ html {
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Inter', sans-serif;
   font-size: 1.6rem;
 }
 
 :root {
-  --primary-color: #7978D9;
   --darkest-gray: #2F2F2F;
   --dark-gray: #484848;
   --medium-gray: #555555;
   --light-gray: #FAFAFA;
   --medium-light-gray: #EAEAEA;
-  --secondary-color: #FA8C10;
-  --light-blue: #3A9FF1;
-  --light-red: #FF576B;
-  --white: #FFFFFF;
-  --black: #000000;
-
-
-
   --wp--preset--color--cyan-bluish-gray: #abb8c3;
   --wp--preset--color--vivid-green-cyan: #00d084;
   --wp--preset--gradient--very-light-gray-to-cyan-bluish-gray: linear-gradient(135deg, rgb(238, 238, 238) 0%, rgb(169, 184, 195) 100%);
-
-  min-height: 100vh;
-}
-
-h1,
-h2,
-h3,
-h4 {
-  font-family: 'Rubik', sans-serif;
-}
-
-h1 {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 5.2rem;
-  line-height: 6.2rem;
-  color: var(--white);
-}
-
-h2 {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 2.8rem;
-  line-height: 3.3rem;
-  color: var(--white);
-}
-
-h3 {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 2.8rem;
-  line-height: 3.3rem;
-  color: var(--primary-color);
-}
-
-h4 {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 3.6rem;
-  line-height: 4.3rem;
-  color: var(--white);
 }
 
 button {
   all: unset;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   cursor: pointer;
   border-radius: 9999px;
@@ -91,13 +39,9 @@ button {
   border-color: rgb(0 0 0 / 1);
   background-color: rgb(0 223 124 / 1);
   padding: 0.5rem 2rem;
+
   font-size: 2rem;
   font-weight: 500;
   color: rgb(0 0 0 / 1);
-  box-sizing: border-box;
   font-family: 'Inter', sans-serif;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
