--- a/src/components/TableContainer/styles.css
+++ b/src/components/TableContainer/styles.css
@@ -1,10 +1,55 @@
 .filter-and-table {
     width: 100%;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: 2rem;
+    position: relative;
 }
 
 .set-new-consumption-button {
     margin-top: 2rem;
+    margin-right: 1rem;
+}
+
+.sort {
+    display: none;
+}
+
+@media (max-width:600px) {
+
+    .sort {
+        background-color: var(--wp--preset--color--vivid-green-cyan);
+        box-shadow: 0px 2px 11px rgba(0, 0, 0, 0.1);
+        width: 100%;
+        height: 3rem;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        padding-right: 1rem;
+        gap: 0.5rem;
+
+        font-size: 1.2rem;
+    }
+
+    .sort-icon {
+        width: 1.3rem;
+        height: 1.3rem;
+    }
+
+    .sort-by-list {
+        width: 12rem;
+        height: 8rem;
+
+
+        position: absolute;
+        right: 0;
+    }
+
+    .sort-by-item {
+        border-bottom: 0.01rem solid var(--medium-gray);
+        font-size: 1rem;
+        padding: 0.5rem;
+        background-color: var(--light-gray);
+    }
+
+    .set-new-consumption-button {
+        font-size: 1.1rem;
+    }
 }
